2003-03-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ModuleItem.cs: it's not public.
	* ModulesConfiguration.cs: it's not public.

2003-02-27  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AuthenticationConfigHandler.cs: 'name' is optional in <forms>.

2003-02-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HandlerFactoryConfiguration.cs: first search in the mappings of this
	instance, then in the parent.

2003-02-13  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* GlobalizationConfiguration.cs: added internal fields to hold the
	values in the globalization node.

	* GlobalizationConfigurationHandler.cs: handler to load
	<system.web/globalization> section.

2003-02-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AuthorizationConfigHandler.cs: handler for system.web/authorization
	section.

	* AuthorizationConfig.cs: keeps record of authorization configuration.

2003-01-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpModulesConfigurationHandler.cs: add a default authentication
	module at the end of the list.

	* ModuleItem.cs: new constructor.

2002-12-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AuthConfig.cs: LoginUrl defaults to login.aspx.

2002-12-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AuthConfig.cs:
	* AuthenticationConfigHandler.cs: handler and helper class for
	system.web/authentication configuration section.

	* HttpHandlersSectionHandler.cs: check for null in attributes.

	* MachineKeyConfig.cs:
	* MachineKeyConfigHandler.cs: handler and helper class for
	system.web/machineKey tag.

2002-10-27  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpHandlersSectionHandler.cs: more null checks.

2002-10-08  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpHandlersSectionHandler.cs: made a couple of static methods be
	part of a class used in other handlers.
	* HttpModulesConfigurationHandler.cs: handler for modules.
	* ModuleItem.cs: added IsMatch method.