@@ -64,7 +64,14 @@ namespace System.Web.Configuration
 
 		bool MatchPath (string path)
 		{
-			return pathRegex.IsMatch (path);
+			if (pathRegex.IsMatch (path))
+				return true;
+
+			int slash = path.LastIndexOf (path);
+			if (slash != -1 && path.Length > slash + 1)
+				return pathRegex.IsMatch (path.Substring (slash + 1));
+
+			return false;
 		}
 
 		void DoValidation ()
