@@ -1,3 +1,8 @@
+2003-10-01  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* HttpApplication.cs: pass the Uri, not the file path to
+	when looking for a handler.
+
 2003-09-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* HttpRequest.cs: small fix needed when reading big POST data.
